--- a/incidents-managment/app/incidents/webapp/manifest.json
+++ b/incidents-managment/app/incidents/webapp/manifest.json
@@ -174,6 +174,18 @@
                       "horizontalAlign": "Begin"
                     }
                   }
+                },
+                "@com.sap.vocabularies.UI.v1.FieldGroup#Details": {
+                  "fields": {
+                    "StatusProgressField": {
+                      "template": "ns.incidents.ext.fragment.StatusProgressField",
+                      "position": {
+                        "placement": "Before",
+                        "anchor": "DataField::urgency_code"
+                      },
+                      "label": "{i18n>status}"
+                    }
+                  }
                 }
               },
               "content": {
@@ -193,15 +205,6 @@
                 }
               }
             }
-          }
-        }
-      }
-    },
-    "extends": {
-      "extensions": {
-        "sap.ui.controllerExtensions": {
-          "sap.fe.templates.ListReport.ListReportController": {
-            "controllerName": "ns.incidents.ext.controller.ListReport"
           }
         }
       }
